--- a/src/app/main-page/references/colleague-quote/colleague-quote.component.scss
+++ b/src/app/main-page/references/colleague-quote/colleague-quote.component.scss
@@ -24,6 +24,10 @@
   @include dFlex($jc: space-between);
   width: 100%;
   height: 40px;
+
+  h3 {
+    text-align: start;
+  }
 }
 
 .cogwheel-marker {
